-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6.0
-
None
-
Windows 10 , MSVC2013 x64 in a 4K monitor with 200% High DPI
-
d7a3b6145999d015997e26e12a7345f774b053f3 (qtbase/5.6, 26.4.2016, 5.6.1)
When using Inspect or Visual UIA Verify (C:\Program Files (x86)\Windows Kits\10\bin\x64\UIAVerify\VisualUIAVerifyNative.exe) I get the window and title bar bound rects correctly, but everything inside the window is being reported in virtual pixels not corrected by the screen's devicePixelRatio
Attached is a code to reproduce. It contains two panels each with two buttons.
- is duplicated by
-
QTBUG-52992 Windows: Accessibility rectangles are not set correctly with HighDPI displays
-
- Closed
-
| For Gerrit Dashboard: QTBUG-52943 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 156946,2 | Windows QPA/High DPI: Scale accessibility coordinates. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 158332,2 | QAccessibleQuickItem: Implement QAccessibleInterface::window(). | 5.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 158333,2 | QAccessibleWidget: Retrieve window from native parent widget. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 158334,2 | QAccessibleMenuItem: Implement QAccessibleInterface::window(). | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 158345,3 | Windows Accessibility: Recurse up to find a window. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 158495,2 | Windows Accessibility: Use QWindowsAccessibility::windowHelper(). | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |